--- a/prism-app/prism-app.csproj
+++ b/prism-app/prism-app.csproj
@@ -113,9 +113,11 @@
     <Compile Include="Models\PictureServiceResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AlertMessageService.cs" />
+    <Compile Include="Services\GeoLocationService.cs" />
     <Compile Include="Services\JsonRpcClient.cs" />
     <Compile Include="Models\PictureServiceRequest.cs" />
     <Compile Include="ViewModels\HubPageViewModel.cs" />
+    <Compile Include="ViewModels\IncrementalLoadingCollection.cs" />
     <Compile Include="ViewModels\LoadableViewModel.cs" />
     <Compile Include="ViewModels\PictureCategoryViewModel.cs" />
     <Compile Include="ViewModels\CategoryDetailPageViewModel.cs" />
