--- a/prism-app/packages.config
+++ b/prism-app/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="win81" />
   <package id="Prism.StoreApps" version="1.1.0" targetFramework="win81" />
   <package id="Unity" version="3.0.1304.1" targetFramework="win81" />
+  <package id="winrtxamltoolkit" version="1.6.1.3" targetFramework="win81" />
 </packages>
