--- a/unit-test/unit-test.csproj
+++ b/unit-test/unit-test.csproj
@@ -108,6 +108,12 @@
   </PropertyGroup>
   <ItemGroup>
     <!--A reference to the entire .Net Framework and Windows SDK are automatically included-->
+    <SDKReference Include="Bing.Maps.Xaml, Version=1.313.0825.0">
+      <Name>Bing Maps for C#, C++, or Visual Basic</Name>
+    </SDKReference>
+    <SDKReference Include="Microsoft.VCLibs, version=12.0">
+      <Name>Microsoft Visual C++ 2013 Runtime Package for Windows</Name>
+    </SDKReference>
     <SDKReference Include="MSTestFramework, Version=11.0" />
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
@@ -115,6 +121,7 @@
     <Compile Include="Mocks\MockAlertMessageService.cs" />
     <Compile Include="Mocks\MockJsonRpcClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GeoLocationServiceFixture.cs" />
     <Compile Include="Services\JsonRpcClientFixture.cs" />
   </ItemGroup>
   <ItemGroup>
