--- a/prism-app/prism-app.csproj
+++ b/prism-app/prism-app.csproj
@@ -96,7 +96,7 @@
     <DefineConstants>TRACE;NETFX_CORE</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
@@ -118,9 +118,11 @@
     <Compile Include="Services\JsonRpcClient.cs" />
     <Compile Include="Models\PictureServiceRequest.cs" />
     <Compile Include="ViewModels\EventAggregator.cs" />
+    <Compile Include="ViewModels\GeoStatisticViewModel.cs" />
     <Compile Include="ViewModels\HubPageViewModel.cs" />
     <Compile Include="ViewModels\IncrementalLoadingCollection.cs" />
     <Compile Include="ViewModels\LoadableViewModel.cs" />
+    <Compile Include="ViewModels\MapStatisticPageViewModel.cs" />
     <Compile Include="ViewModels\ObservableViewCollection.cs" />
     <Compile Include="ViewModels\PictureCategoryViewModel.cs" />
     <Compile Include="ViewModels\CategoryDetailPageViewModel.cs" />
@@ -134,6 +136,9 @@
     <Compile Include="ViewModels\ViewModelContractResolver.cs" />
     <Compile Include="Views\CategoryDetailPage.xaml.cs">
       <DependentUpon>CategoryDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MapStatisticPage.xaml.cs">
+      <DependentUpon>MapStatisticPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PictureCommentUserControl.xaml.cs">
       <DependentUpon>PictureCommentUserControl.xaml</DependentUpon>
@@ -187,6 +192,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\MapStatisticPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\PictureCommentUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -218,9 +227,6 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\netcore45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="WinRTXamlToolkit">
-      <HintPath>..\packages\winrtxamltoolkit.1.6.1.3\lib\netcore451\WinRTXamlToolkit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
