--- a/prism-app/prism-app.csproj
+++ b/prism-app/prism-app.csproj
@@ -112,11 +112,14 @@
     <Compile Include="Converters\StringFormatConverter.cs" />
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\PictureServiceResponse.cs" />
+    <Compile Include="Models\UserServiceRequest.cs" />
+    <Compile Include="Models\UserServiceResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AlertMessageService.cs" />
     <Compile Include="Services\GeoLocationService.cs" />
     <Compile Include="Services\JsonRpcClient.cs" />
     <Compile Include="Models\PictureServiceRequest.cs" />
+    <Compile Include="Services\LoginCredentialService.cs" />
     <Compile Include="ViewModels\EventAggregator.cs" />
     <Compile Include="ViewModels\GeoStatisticViewModel.cs" />
     <Compile Include="ViewModels\HubPageViewModel.cs" />
