--- a/prism-app/prism-app.csproj
+++ b/prism-app/prism-app.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Models\UserServiceResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AlertMessageService.cs" />
+    <Compile Include="Services\ApplicationStateService.cs" />
     <Compile Include="Services\GeoLocationService.cs" />
     <Compile Include="Services\JsonRpcClient.cs" />
     <Compile Include="Models\PictureServiceRequest.cs" />
