--- a/prism-app/prism-app.csproj
+++ b/prism-app/prism-app.csproj
@@ -126,7 +126,9 @@
     <Compile Include="Services\LoginCredentialService.cs" />
     <Compile Include="Services\MasterDataService.cs" />
     <Compile Include="ViewModels\ActivityViewModel.cs" />
+    <Compile Include="ViewModels\ConfirmActionUserControlViewModel.cs" />
     <Compile Include="ViewModels\EventAggregator.cs" />
+    <Compile Include="ViewModels\FlyoutViewModel.cs" />
     <Compile Include="ViewModels\GeoStatisticViewModel.cs" />
     <Compile Include="ViewModels\HubPageViewModel.cs" />
     <Compile Include="ViewModels\IncrementalLoadingCollection.cs" />
@@ -180,6 +182,9 @@
     </Compile>
     <Compile Include="Views\ProfileStatusUserControl.xaml.cs">
       <DependentUpon>ProfileStatusUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ConfirmActionUserControl.xaml.cs">
+      <DependentUpon>ConfirmActionUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ReportContentUserControl.xaml.cs">
       <DependentUpon>ReportContentUserControl.xaml</DependentUpon>
@@ -266,6 +271,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ProfileStatusUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ConfirmActionUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
