--- a/prism-app/packages.config
+++ b/prism-app/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="win81" />
-  <package id="Prism.StoreApps" version="1.1.0" targetFramework="win81" />
-  <package id="Unity" version="3.0.1304.1" targetFramework="win81" />
+  <package id="CommonServiceLocator" version="1.2" targetFramework="win81" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="win81" />
+  <package id="Prism.Mvvm" version="1.1.1" targetFramework="win81" />
+  <package id="Prism.StoreApps" version="2.0.0" targetFramework="win81" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="win81" />
   <package id="winrtxamltoolkit" version="1.6.1.3" targetFramework="win81" />
 </packages>
