--- a/unit-test/unit-test.csproj
+++ b/unit-test/unit-test.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Mocks\MockJsonRpcClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GeoLocationServiceFixture.cs" />
+    <Compile Include="Services\ImageUploadFixture.cs" />
     <Compile Include="Services\JsonRpcClientFixture.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +133,9 @@
     <None Include="unit-test_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\TestUploadPicture.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\UnitTestLogo.scale-100.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
