--- a/prism-app/packages.config
+++ b/prism-app/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.2" targetFramework="win81" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="win81" />
-  <package id="Prism.Mvvm" version="1.1.1" targetFramework="win81" />
-  <package id="Prism.StoreApps" version="2.0.0" targetFramework="win81" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="win81" />
-  <package id="winrtxamltoolkit" version="1.6.1.3" targetFramework="win81" />
+  <package id="CommonServiceLocator" version="1.2" targetFramework="win81" userInstalled="true" />
+  <package id="Microsoft.VCLibs.110.Redist.x86" version="1.0.0-alpha" targetFramework="win81" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="win81" userInstalled="true" />
+  <package id="Prism.Mvvm" version="1.1.1" targetFramework="win81" userInstalled="true" />
+  <package id="Prism.StoreApps" version="2.0.0" targetFramework="win81" userInstalled="true" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="win81" userInstalled="true" />
+  <package id="winrtxamltoolkit" version="1.6.1.3" targetFramework="win81" userInstalled="true" />
 </packages>
