--- a/socialalert-android/Properties/AndroidManifest.xml
+++ b/socialalert-android/Properties/AndroidManifest.xml
@@ -7,5 +7,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
-	<application android:label="Snypix" android:icon="@drawable/ic_launcher"></application>
+	<application android:label="Snypix" android:icon="@drawable/ic_launcher">
+  </application>
 </manifest>
