--- a/socialalert-portable/socialalert-portable.csproj
+++ b/socialalert-portable/socialalert-portable.csproj
@@ -38,8 +38,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\AppConfig.cs" />
     <Compile Include="Model\AppState.cs" />
-    <Compile Include="Data\Constants.cs" />
+    <Compile Include="Model\Constants.cs" />
     <Compile Include="Data\MediaServiceRequest.cs" />
     <Compile Include="Data\MediaServiceResponse.cs" />
     <Compile Include="Data\ProfileServiceRequest.cs" />
@@ -53,13 +54,15 @@
     <Compile Include="ModelPage.cs" />
     <Compile Include="Model\PendingUpload.cs" />
     <Compile Include="Model\PictureGridItem.cs" />
+    <Compile Include="Model\Translation.cs" />
     <Compile Include="PictureGridPage.xaml.cs">
       <DependentUpon>PictureGridPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\SimpleModel.cs" />
-    <Compile Include="SqliteClient.cs" />
+    <Compile Include="DatabaseClient.cs" />
     <Compile Include="NotificationClient.cs" />
+    <Compile Include="UploadService.cs" />
     <Compile Include="Util\Extension.cs" />
   </ItemGroup>
   <ItemGroup>
